# zed_rtabmap_ros2

./: .gitignore  LICENSE  README.md
custom_pkg/: CMakeLists.txt  package.xml  setup.py
custom_pkg/config/: rtabmap_params_combined.yaml
custom_pkg/custom_pkg/: measure.py  save_pointcloud_service.py
custom_pkg/launch/: combined_zed_rtabmap.launch.py  rtabmap.launch.py  rtabmap_original.launch.py  zed_rtabmap.launch.py
custom_pkg/pointclouds/: visualize_pcl.py
custom_pkg/videos/: bag_to_video.py
post_processing/3d_detection/: vegetation_detection.ipynb
post_processing/color_filtering/: 3d_color_filtering.ipynb
zed-ros2-wrapper/zed_wrapper/config/: common_stereo.yaml
